koha-tmpl/intranet-tmpl/prog/css/src/mainpage.scss
@import "variables";

#area-news,
#area-quote {
    h3 {
        margin: 0;
        opacity: .7;
        padding: .3em .3em 0 .3em;
    }
}

.newsitem {
    background-color: #FFF;
    border-bottom: 1px solid #EEE;
    border-radius: 6px;
    margin: .3em;
    opacity: .75;
    padding: 3px;
}

.newsfooter {
    color: #808080;
    font-size: 80%;
}

ul {
    &.biglinks-list {
        padding: 0;

        li {
            list-style-type: none;
            margin-bottom: 1em;

            a {
                &.icon_general {
                    align-items: center;
                    background-color: #E0E0E0;
                    border-radius: 6px;
                    color: #000;
                    display: flex;
                    font-size: large;
                    height: 50px;
                    padding: 10px;
                    text-decoration: none;

                    &:hover {
                        background-color: $background-color-primary;
                        color: #FFF;

                        img {
                            filter: invert( 100% );
                        }

                        .fa-stack-1x {
                            color: #BCBCBC;
                        }
                    }

                    .fa-fw {
                        font-size: 1.5em;
                        margin-right: .2em;
                    }

                    .fa-stack-2x {
                        font-size: 1.3em;
                    }

                    .fa-stack-1x {
                        color: #626262;
                        font-size: .9em;
                        left: -5px;
                        top: -1px;
                    }
                }
            }
        }

        img {
            max-height: 100%;
        }
    }
}

#area-pending {
    clear: left;
    width: 100%;
}

.pending-info {
    margin-bottom: 2px;
    margin-left: 8px;
    margin-top: 2px;
}

.pending-number-link {
    font-size: 1.1em;
    font-weight: bold;
}

#area-userblock {
    margin-top: 10px;
    width: 100%;
}

.user-info {
    margin: 8px;
}

.intranet-main .row {
    margin-left: 0;
    margin-right: 0;
}

